<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TgWsProxy</string>
    <string name="notification_channel_name">Proxy service</string>
    <string name="notification_title">TgWsProxy running</string>
    <string name="notification_text">Listening on 127.0.0.1:%1$d</string>
    <string name="byedpi_docs">https://github.com/hufrea/byedpi/blob/v0.13/README.md</string>
    <string name="vpn_connect">Connect</string>
    <string name="vpn_disconnect">Disconnect</string>
    <string name="vpn_connected">Connected</string>
    <string name="vpn_disconnected">Disconnected</string>
    <string name="proxy_up">Proxy is up</string>
    <string name="proxy_down">Proxy is down</string>
    <string name="proxy_start">Start</string>
    <string name="proxy_stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="vpn_permission_denied">VPN permission denied</string>
    <string name="settings_unavailable">Please stop the VPN service before changing settings</string>
    <string name="title_settings">Settings</string>
    <string name="save_logs">Save logs</string>
    <string name="reset_settings">Reset</string>
    <string name="logs_failed">Failed to collect logs</string>
    <string name="proxy_address">%1$s:%2$s</string>
    <string name="theme_settings">Theme</string>
    <string name="mode_setting">Mode</string>
    <string name="dbs_ip_setting">DNS</string>
    <string name="bye_dpi_proxy_ip_setting">Listen address</string>
    <string name="byedpi_proxy_port_setting">Port</string>
    <string name="byedpi_max_connections_setting">Maximum number of connections</string>
    <string name="byedpi_buffer_size_setting">Buffer size</string>
    <string name="byedpi_default_ttl_setting">Default TTL</string>
    <string name="byedpi_no_domain_setting">No domain</string>
    <string name="byedpi_desync_method_setting">Desync method</string>
    <string name="byedpi_split_position_setting">Split position</string>
    <string name="byedpi_split_at_host_setting">Split at host</string>
    <string name="byedpi_fake_ttl_setting">TTL of fake packets</string>
    <string name="byedpi_host_mixed_case_setting">Host mixed case</string>
    <string name="byedpi_domain_mixed_case_setting">Domain mixed case</string>
    <string name="byedpi_host_remove_spaces_setting">Host remove spaces</string>
    <string name="byedpi_tlsrec_enabled_setting">Split TLS record</string>
    <string name="byedpi_tlsrec_position_setting">TLS record split position</string>
    <string name="byedpi_tlsrec_at_sni_setting">Split TLS record at SNI</string>
    <string name="version">Version</string>
    <string name="source_code_link">Source code</string>
    <string name="byedpi_readme_link">What does all of this mean?</string>
    <string name="failed_to_start">Failed to start %1$s</string>
    <string name="vpn_channel_name">VPN</string>
    <string name="proxy_channel_name">Proxy</string>
    <string name="vpn_notification_content">VPN is running</string>
    <string name="proxy_notification_content">Proxy is running</string>
    <string name="general_category">General</string>
    <string name="byedpi_category">ByeDPI</string>
    <string name="about_category">About</string>
    <string name="command_line_editor">Command line editor</string>
    <string name="ui_editor">UI editor</string>
    <string name="use_command_line_settings">Use command line settings</string>
    <string name="desync_http">Desync HTTP</string>
    <string name="desync_https">Desync HTTPS</string>
    <string name="desync_udp">Desync UDP</string>
    <string name="oob_data">OOB Data</string>
    <string name="sni_of_fake_packet">SNI of fake packet</string>
    <string name="byedpi_proxy">Proxy</string>
    <string name="byedpi_desync">Desync</string>
    <string name="command_line_arguments">Command line arguments</string>
    <string name="byedpi_hosts_mode_setting">Hosts</string>
    <string name="byedpi_hosts_blacklist_setting">Hosts blacklist</string>
    <string name="byedpi_hosts_whitelist_setting">Hosts whitelist</string>
    <string name="byedpi_tcp_fast_open_setting">TCP Fast Open</string>
    <string name="byedpi_udp_fake_count">UDP fake count</string>
    <string name="ipv6_setting">IPv6</string>
    <string name="byedpi_fake_offset_setting">Fake offset</string>
    <string name="byedpi_drop_sack_setting">Drop SACK</string>
    <string name="desync_udp_category">UDP</string>
    <string name="desync_http_category">HTTP</string>
    <string name="desync_https_category">HTTPS</string>
    <string name="byedpi_protocols_category">Protocols</string>
    <string name="byedpi_protocols_hint">Uncheck all to desync all traffic</string>
    <string name="byedpi_vpn_channel_name">ByeDPI VPN</string>
    <string name="byedpi_notification_title">ByeDPI VPN running</string>
    <string name="byedpi_vpn_notification_content">System traffic via local DPI bypass</string>
</resources>
